feat: implement password reset and change feature/api docs update
